--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,9 @@ FROM nginx:alpine
 # Copy static files to the default Nginx public directory
 COPY . /usr/share/nginx/html
 
+# Copy custom nginx config to container
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Expose port 80
 EXPOSE 80
 
