Switch backend to gunicorn, improve Socket.IO integration
Replaces Flask's default server with gunicorn using eventlet for better production performance. Refactors Socket.IO setup for improved logging, connection handling, and background task management. Updates frontend Socket.IO client for robust reconnection and WebSocket support. Enhances nginx config for proper WebSocket proxying and container networking. Adds gunicorn to backend requirements and enables restart policy in docker-compose.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,5 +17,5 @@ EXPOSE 5000
 # Set environment variables (optional)
 ENV FLASK_ENV=production
 
-# Run the app
-CMD ["python", "app.py"]
+# Run the app with gunicorn
+CMD ["gunicorn", "--worker-class", "eventlet", "-w", "1", "--bind", "0.0.0.0:5000", "app:app"]
