--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,13 +14,19 @@ http {
   sendfile on;
   keepalive_timeout 65;
 
+  # Map for WebSocket upgrade
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+  }
+
   # (Optional) sane proxy timeouts
   proxy_read_timeout  60s;
   proxy_connect_timeout 60s;
   proxy_send_timeout  60s;
 
   server {
-    listen       80;
+    listen       0.0.0.0:80;
     server_name  localhost;
 
     location / {
@@ -31,7 +37,7 @@ http {
     location /api/ {
       # With trailing slashes on both location and proxy_pass,
       # NGINX strips '/api/' and forwards the remainder to the upstream.
-      proxy_pass http://127.0.0.1:5000/;
+      proxy_pass http://backend:5000/;
 
       proxy_http_version 1.1;
       proxy_set_header Host $host;
@@ -45,7 +51,7 @@ http {
     }
 
     location /socket.io/ {
-      proxy_pass http://127.0.0.1:5000/socket.io/;
+      proxy_pass http://backend:5000/socket.io/;
 
       proxy_http_version 1.1;
       proxy_set_header Host $host;
@@ -53,9 +59,12 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
 
-      # WebSocket headers
+      # WebSocket headers - FIX: Connection header must be conditional
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
+      proxy_set_header Connection $connection_upgrade;
+      
+      # Disable buffering for WebSocket
+      proxy_buffering off;
     }
   }
 }
